# starrupture_agent_skills

./: README.md  phase0.md  phase1.md  plan.md  pyproject.toml
starrupture_agent_skills/: __init__.py
starrupture_agent_skills/agent/: __init__.py
starrupture_agent_skills/cli/: __init__.py  main.py
starrupture_agent_skills/game_db/: __init__.py  buildings.json  items.json  loaders.py  recipes.json
starrupture_agent_skills/game_db/importers/: __init__.py
starrupture_agent_skills/mcp_server/: __init__.py
starrupture_agent_skills/models/: __init__.py  factory_models.py  game_models.py  planner_models.py
starrupture_agent_skills/openclaw_adapter/: README.md  __init__.py  skill_manifest.example.json
starrupture_agent_skills/planner_core/: __init__.py
starrupture_agent_skills/storage/: __init__.py
tests/: test_game_data.py  test_smoke.py
